Minor cosmetic changes